# restapi/configure_todo_list.go
@@ -4,13 +4,11 @@ package restapi
 
 import (
 	"crypto/tls"
+	"github.com/bwangelme/SwaggerDemo/models"
+	"github.com/go-openapi/swag"
 	"net/http"
 	"sync"
 	"sync/atomic"
-
-	"github.com/go-openapi/swag"
-
-	"github.com/bwangelme/SwaggerDemo/models"
 
 	errors "github.com/go-openapi/errors"
 	runtime "github.com/go-openapi/runtime"
@@ -27,7 +25,7 @@ func configureFlags(api *operations.TodoListAPI) {
 }
 
 var items = make(map[int64]*models.Item)
-var lastID int64
+var lastID int64 = 1
 var itemsLock = &sync.Mutex{}
 
 func newItemID() int64 {
@@ -36,7 +34,7 @@ func newItemID() int64 {
 
 func addItem(item *models.Item) error {
 	if item == nil {
-		return errors.New(http.StatusInternalServerError, "item must be present")
+		return errors.New(500, "item must be present")
 	}
 
 	itemsLock.Lock()
@@ -46,6 +44,24 @@ func addItem(item *models.Item) error {
 	item.ID = newID
 	items[newID] = item
 
+	return nil
+}
+
+func updateItem(id int64, item *models.Item) error {
+	if item == nil {
+		return errors.New(500, "item must be present")
+	}
+
+	itemsLock.Lock()
+	defer itemsLock.Unlock()
+
+	_, exists := items[id]
+	if !exists {
+		return errors.NotFound("not found: item %d", id)
+	}
+
+	item.ID = id
+	items[id] = item
 	return nil
 }
 
@@ -62,17 +78,18 @@ func deleteItem(id int64) error {
 	return nil
 }
 
-func allItems(since int64, limit int64) (result []*models.Item) {
+func allItems(since, limit int64) (result []*models.Item) {
 	result = make([]*models.Item, 0)
 	for id, item := range items {
 		if len(result) >= int(limit) {
 			return
 		}
-		if since == 0 || id > since {
+		if id > since {
 			result = append(result, item)
 		}
 	}
-	return
+
+	return nil
 }
 
 func configureAPI(api *operations.TodoListAPI) http.Handler {
@@ -89,28 +106,20 @@ func configureAPI(api *operations.TodoListAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
-	api.TodosDeleteIDHandler = todos.DeleteIDHandlerFunc(func(params todos.DeleteIDParams) middleware.Responder {
-		if err := deleteItem(params.ID); err != nil {
-			return todos.NewDeleteIDDefault(500).WithPayload(&models.Error{
-				Code:    500,
-				Message: swag.String(err.Error()),
-			})
-		}
-		return todos.NewDeleteIDNoContent()
-	})
-
-	api.TodosPostHandler = todos.PostHandlerFunc(func(params todos.PostParams) middleware.Responder {
+	api.TodosAddOneHandler = todos.AddOneHandlerFunc(func(params todos.AddOneParams) middleware.Responder {
 		if err := addItem(params.Body); err != nil {
-			return todos.NewPostDefault(500).WithPayload(&models.Error{
-				Code:    500,
-				Message: swag.String(err.Error()),
-			})
+			return todos.NewAddOneDefault(500).WithPayload(&models.Error{Code:500, Message: swag.String(err.Error())})
 		}
-		return todos.NewPostCreated().WithPayload(params.Body)
-	})
 
-	api.TodosGetHandler = todos.GetHandlerFunc(func(params todos.GetParams) middleware.Responder {
-		mergedParams := todos.NewGetParams()
+		return todos.NewAddOneCreated().WithPayload(params.Body)
+	})
+	if api.TodosDestroyOneHandler == nil {
+		api.TodosDestroyOneHandler = todos.DestroyOneHandlerFunc(func(params todos.DestroyOneParams) middleware.Responder {
+			return middleware.NotImplemented("operation todos.DestroyOne has not yet been implemented")
+		})
+	}
+	api.TodosFindTodosHandler = todos.FindTodosHandlerFunc(func(params todos.FindTodosParams) middleware.Responder {
+		mergedParams := todos.NewFindTodosParams()
 		mergedParams.Since = swag.Int64(0)
 		if params.Since != nil {
 			mergedParams.Since = params.Since
@@ -118,9 +127,14 @@ func configureAPI(api *operations.TodoListAPI) http.Handler {
 		if params.Limit != nil {
 			mergedParams.Limit = params.Limit
 		}
-
-		return todos.NewGetOK().WithPayload(allItems(*mergedParams.Since, *mergedParams.Limit))
+		return todos.NewFindTodosOK().WithPayload(allItems(*mergedParams.Since, *mergedParams.Limit))
 	})
+
+	if api.TodosUpdateOneHandler == nil {
+		api.TodosUpdateOneHandler = todos.UpdateOneHandlerFunc(func(params todos.UpdateOneParams) middleware.Responder {
+			return middleware.NotImplemented("operation todos.UpdateOne has not yet been implemented")
+		})
+	}
 
 	api.ServerShutdown = func() {}
 
