# swagger.yml
@@ -1,5 +1,96 @@
+swagger: "2.0"
 consumes:
   - application/io.goswagger.examples.todo-list.v1+json
+produces:
+  - application/io.goswagger.examples.todo-list.v1+json
+info:
+  description: From the todo list tutorial on goswagger.io
+  title: A todo list application
+  version: 1.0.0
+schemes:
+  - http
+paths:
+  /:
+    get:
+      tags:
+        - todos
+      operationId: findTodos
+      parameters:
+        - name: since
+          in: query
+          type: integer
+          format: int64
+          default: 0
+        - name: limit
+          in: query
+          type: integer
+          format: int64
+          default: 20
+      responses:
+        200:
+          description: list the todo operations
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/item"
+        default:
+          description: generic error response
+          schema:
+            $ref: '#/definitions/error'
+    post:
+      tags:
+        - todos
+      operationId: addOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/item"
+      responses:
+        201:
+          description: Created
+          schema:
+            $ref: '#/definitions/item'
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/error'
+  /{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+    put:
+      tags:
+        - "todos"
+      operationId: updateOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/item'
+      responses:
+        200:
+          description: ok
+          schema:
+            $ref: '#/definitions/item'
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/error'
+    delete:
+      tags:
+        - todos
+      operationId: destroyOne
+      responses:
+        204:
+          description: Deleted
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/error'
 definitions:
   item:
     type: object
@@ -25,88 +116,3 @@ definitions:
         format: int64
       message:
         type: string
-info:
-  description: From the todo list tutorial on goswagger.io
-  title: A todo list application
-  version: 1.0.0
-paths:
-  /:
-    get:
-      tags:
-        - todos
-      parameters:
-        - name: since
-          in: query
-          type: integer
-          format: int64
-        - name: limit
-          in: query
-          type: integer
-          format: int64
-          default: 20
-      responses:
-        200:
-          description: list the todo operations
-          schema:
-            type: array
-            items:
-              $ref: "#/definitions/item"
-        default:
-          description: generic error response
-          schema:
-            $ref: '#/definitions/error'
-    post:
-      tags:
-        - todos
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: "#/definitions/item"
-      responses:
-        201:
-          description: Created
-          schema:
-            $ref: '#/definitions/item'
-        default:
-          description: error
-          schema:
-            $ref: '#/definitions/error'
-  /{id}:
-    parameters:
-      - type: integer
-        format: int64
-        name: id
-        in: path
-        required: true
-    put:
-      tags: ["todos"]
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: '#/definitions/item'
-      responses:
-        200:
-          description: ok
-          schema:
-            $ref: '#/definitions/item'
-        default:
-          description: error
-          schema:
-            $ref: '#/definitions/error'
-    delete:
-      tags:
-        - todos
-      responses:
-        204:
-          description: Deleted
-        default:
-          description: error
-          schema:
-            $ref: '#/definitions/error'
-produces:
-  - application/io.goswagger.examples.todo-list.v1+json
-schemes:
-  - http
-swagger: "2.0"
